--- a/css/common.css
+++ b/css/common.css
@@ -19,15 +19,19 @@ body {
 }
 .logo-container {
     position: absolute;
-    top: 40px;
+    top: 50px;
     left: 50px;
     z-index: 1000;
+    height: 50px;
+    display: flex;
+    align-items: center;
 }
 
 .logo {
     display: flex;
     align-items: center;
     color: white;
+    height: 100%;
 }
 
 .logo-icon {
@@ -45,11 +49,14 @@ body {
 
 .hero-navigation {
     position: absolute;
-    top: 60px;
+    top: 50px;
     left: 50%;
     transform: translateX(-50%);
     z-index: 1000;
     width: auto;
+    height: 50px;
+    display: flex;
+    align-items: center;
 }
 
 .nav-capsule {
@@ -60,6 +67,8 @@ body {
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 50px;
 }
 
 .nav-menu {
