--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,12 +1,12 @@
-/* === LOGO === */
 .logo {
     position: absolute;
-    top: 40px;
+    top: 50px;
     left: 50px;
     z-index: 1000;
     display: flex;
     align-items: center;
     color: white;
+    height: 50px;
 }
 
 .logo-icon {
@@ -23,14 +23,16 @@
     margin-left: 10px;
 }
 
-/* === HERO NAVIGATION === */
 .hero-navigation {
     position: absolute;
-    top: 60px;
+    top: 50px;
     left: 50%;
     transform: translateX(-50%);
     z-index: 1000;
     width: auto;
+    height: 50px;
+    display: flex;
+    align-items: center;
 }
 
 .nav-capsule {
@@ -41,6 +43,8 @@
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 50px;
 }
 
 .nav-menu {
@@ -72,7 +76,6 @@
     background: rgba(255, 193, 7, 0.1);
 }
 
-/* === 响应式样式 === */
 @media (max-width: 768px) {
     .logo-icon {
         font-size: 1.8rem;
@@ -101,7 +104,7 @@
 }
 
 @media (max-width: 576px) {
-    /* .logo {
+    .logo {
         top: 30px;
         left: 30px;
     }
@@ -112,7 +115,7 @@
     
     .logo-text {
         font-size: 1.4rem;
-    } */
+    }
     
     .hero-navigation {
         top: 100px;
