--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,27 +1,4 @@
-.logo {
-    position: absolute;
-    top: 50px;
-    left: 50px;
-    z-index: 1000;
-    display: flex;
-    align-items: center;
-    color: white;
-    height: 50px;
-}
-
-.logo-icon {
-    font-size: 2rem;
-    margin-right: 12px;
-    color: white;
-}
-
-.logo-text {
-    font-size: 1.8rem;
-    font-weight: 900;
-    letter-spacing: 2px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    margin-left: 10px;
-}
+/* Logo styles moved to style.css to avoid conflicts */
 
 .hero-navigation {
     position: absolute;
