--- a/css/page3.css
+++ b/css/page3.css
@@ -225,6 +225,7 @@
     position: relative;
     height: 600px;
     overflow: hidden;
+    border-radius: 20px;
 }
 
 
@@ -233,6 +234,7 @@
     height: 100%;
     object-fit: cover;
     position: relative;
+    border-radius: 20px;
 }
 
 .mengban {
@@ -245,6 +247,7 @@
     width: 100%;
     height: 100%;
     z-index: 1000;
+    border-radius: 20px;
 }
 
 .news-section {
@@ -708,6 +711,7 @@
 
     .services-image-container {
         height: 500px;
+        border-radius: 20px;
     }
 
     .services-content {
@@ -820,6 +824,11 @@
 
     .services-image-container {
         height: 400px;
+        border-radius: 20px;
+    }
+
+    .services-image {
+        border-radius: 20px;
     }
 
     .services-content {
@@ -928,6 +937,11 @@
 
     .services-image-container {
         height: 350px;
+        border-radius: 20px;
+    }
+
+    .services-image {
+        border-radius: 20px;
     }
 
     .feature-item {
